# uni-doc

./: .gitignore  README.md  index.html  package-lock.json  package.json  promo.html  start-tauri.bat  tsconfig.app.json  unidoc agent PRD.md  vite.config.ts
.cargo/: config.toml
.trae/specs/implement-unidoc-ai-agent/: checklist.md  spec.md  tasks.md
design/: --brand-css
design/pages/: context-menu.html  editor.html  presentation-dark.html  presentation.html  settings-dark.html
design/unidoc-redesign/: colors_and_type.css  unidoc-redesign.design
design/unidoc-redesign/pages/: ai-floating-expanded.html  ai-floating-minimized.html  editor-dark.html  editor-light.html  file-explorer.html  outline-panel.html  settings.html
design/uushark-ai-chat-ui/: colors_and_type.css  orchestration-summary.json  uushark-ai-chat-ui.design
docs/: 01-HTML混排.md  AI-GUIDE.md  PRD.md  UI-redesign.md  ai-ui-redesign-guide.md
drafts/v1-pages/: ai-panel-dark.html  ai-panel.html  editor-dark.html  settings.html
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  markdown.rs
src/ai/: agent.ts  context.ts  markdown.ts  memory.ts  model.ts  tools.ts  types.ts
src/components/blocks/: CodeBlock.vue  marks.ts  (+8 more)
src/composables/: useBreakpoint.ts  useDialog.ts  useWikilinkAutocomplete.ts
src/router/: index.ts
src/stores/: aiConversation.ts  aiMemory.ts  document.ts  editor.ts  replay.ts  settings.ts  theme.ts  vault.ts
src/views/: EditorView.vue  SettingsView.vue
(+35 files in other folders)
